# PepSuite

./: .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  CHANGELOG.md  LICENSE  NOTICE.md  README.md  c_cpp_properties.json  cloc.sh  lerna.json  package-lock.json  package.json  tsconfig.json
lib/builtins/test/figures_present/: CMakeLists.txt  main.cpp
lib/core/: .gitignore  CHANGELOG.md  CMakeLists.txt  build-js.sh  build-native-cov.sh  build-native-rel.sh  index.d.ts  index.template.js  package-lock.json  package.json
lib/core/docs/: Doxyfile
lib/core/src/libisa/: version.hpp.in
lib/core/src/libisa/asmb/: highlight.hpp
lib/core/src/libisa/asmb/pep10/: create_driver.cpp  directives.hpp  directives.tpp  highlight.cpp  highlight.hpp  ir.cpp  parser.hpp  tokenizer.hpp
lib/core/src/libisa/components/delta/: base.tpp  delta_mmio.hpp  delta_mmio.tpp  grouped.hpp  grouped.tpp  vector.hpp  vector.tpp
lib/core/src/libisa/components/machine/: delta.hpp  interface.hpp  machine_error.hpp  processor_model.hpp
lib/core/src/libisa/components/reg/: block.hpp
lib/core/src/libisa/elf_tools/: elf_helper.cpp
lib/core/src/libisa/elf_tools/pep10/: mem_map.hpp
lib/core/src/libisa/isa/pep10/: from_elf.hpp  from_elf.tpp  local_machine.hpp  local_machine.tpp  local_processor.hpp  local_processor.tpp  pep10.cpp
lib/core/src/libisa/isa/pep9/: pep9.hpp
lib/core/src/libisa/masm/: conversion.cpp  conversion.hpp  driver.hpp  driver.tpp  macroparser.hpp  registry.cpp  registry.hpp
lib/core/src/libisa/masm/backend/: sanity.tpp
lib/core/src/libisa/masm/debug/: stack.hpp
lib/core/src/libisa/masm/elf/: addr_line_mapping.hpp  io_error.hpp  mmio.cpp  mmio.hpp  pack.hpp  pack.tpp
lib/core/src/libisa/masm/frontend/: imagize.tpp  preprocesser.hpp  preprocesser.tpp  tokenizer.hpp  tokenizer.tpp  tokens.hpp
lib/core/src/libisa/masm/ir/: macro.tpp
lib/core/src/libisa/masm/project/: image.hpp  image.tpp  init_project.hpp  message_handler.hpp  message_handler.tpp  project.hpp  section.hpp  section.tpp
lib/core/src/libisa/symbol/: table.hpp  table.tpp  visit.hpp  visit.tpp
lib/core/src/libisa/utils/: format.cpp  format.hpp
lib/core/src/nodeisa/: CMakeLists.txt  helper.hpp  pep10.cpp  pep10.hpp  pep9.cpp  sim.hpp
lib/core/test/libisa/asmb/: CMakeLists.txt
lib/core/test/libisa/asmb/pep10/: preprocess.cpp
lib/core/test/libisa/builtins/: CMakeLists.txt
lib/core/test/libisa/definitions/: CMakeLists.txt
lib/core/test/libisa/definitions/pep10/: memmap.cpp
lib/core/test/libisa/elf_tools/: CMakeLists.txt
lib/core/test/libisa/masm/: CMakeLists.txt  lir.cpp  registry.cpp
lib/core/test/libisa/storage/: CMakeLists.txt  mmi.cpp  mmo.cpp  pubsub.cpp  readonly.cpp  storage.cpp
lib/core/test/libisa/symbol/: CMakeLists.txt  one_table.cpp
(+109 files in other folders)
